<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AboutActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imgAboutLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/lblAboutTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="24sp"/>

    <TextView
        android:id="@+id/lblAboutGit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtGit"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24sp"/>

    <TextView
        android:id="@+id/lblAboutAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAuthor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/lblAboutEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEmail"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/lblAboutDedicated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDedicatoria"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

</LinearLayout>